[package]
name = "wasmtest"
version = "0.1.0"
edition = "2021"
default-run = "wkr"

# [lib]
# name = "wkr_runtime"
# path = "src/lib.rs"

[[bin]]
name = "wkr"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "test_runtime"
path = "src/test_runtime.rs"


[dependencies]
wkr-core = { workspace = true }
tokio = { workspace = true }
axum = { version = "0.6.1", features = ["headers", "form"] } 
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
serde = "1.0.145"
futures = "0.3.24"
tokio-stream = "0.1.11"
jsonwebtoken = "8.2.0"
chrono = "0.4.23"
anyhow.workspace = true
thiserror.workspace = true
serde_json.workspace = true
wapc-codec.workspace = true
uuid = { version = "1.2.2", features = ["v4"] }
url = "2.3.1"
urlpattern = "0.2.0"
form_urlencoded = "1.1.0"
once_cell = "1.17.0"
moka = { version = "0.9.6", features = ["future"] }
object_store = "0.5.2"

[workspace]
# members = ["crates/*"]
members = [
    "crates/common",
    "crates/core",
    "crates/database",
    "crates/runtime",
    "crates/fetch",
    "crates/file",
    "crates/event",
    ]

[workspace.dependencies]
metrics = "0.20.1"
wapc-codec = "1.0.0"
anyhow = "1.0.65"
tokio = { version = "1.21.1", features = ["full"] } 
thiserror = "1.0"
serde_json = "1.0.85"
serde = "1.0.145"
serde_bytes = "0.11.7"
wkr-runtime = {version ="0.0.1", path="crates/runtime"}
log = "0.4"
wkr-core = { path = "crates/core", version = "0.1.0" }
wkr-common = { path = "crates/common", version = "0.0.1" }
async-trait = "0.1.60"
futures = "0.3.24"

# # reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "stream", "gzip", "brotli", "socks"] }
# serde = "1.0.145"
# tokio-stream = "0.1.10"
# tokio-util = { version = "0.7", features = ["io"] }
# # wapc = "1.0.0"
# wapc = {version ="1.0.0", path="/home/dallen/Codes/wapc-rs/crates/wapc"}
# # wasmtime = "1.0.0"
# # wasmtime-provider = "1.2.0"
# wasmtime-provider = {version ="1.2.0", path="/home/dallen/Codes/wapc-rs/crates/runtime"}
# serde_json = "1.0.85"
# http = "0.2.8"

# bytes = "1.2.1"
# hyper = { version = "0.14", features = ["full"] }
# tokio = { version = "1.21.1", features = ["full"] } 
# routerify = "3.0.0"

# # wapc-pool = "1.0.0"
# wapc-pool = {version ="1.0.0", path="/home/dallen/Codes/wapc-rs/crates/wapc-pool"}
# # http-body = { git = "https://github.com/hyperium/http-body", rev = "6d7dd17" }
# # http-body-util = { git = "https://github.com/hyperium/http-body", rev = "6d7dd17" }
# log = "0.4"
# thiserror = "1.0"
# rusty_pool = "0.6"
# crossbeam = "0.8"
# rand = "0.8.5"
# ring = "0.16.20"
# rsa = "0.6.1"
# sha2 = "0.10.6"
# base64 = "0.13.0"
# p256 = "0.11.1"
# aes-kw = "0.2.1"
# uuid = { version = "1.2.1", features = ["v4"] }
# byteorder = "1.4.3"
# serde_bytes = "0.11.7"
# urlpattern = "0.2.0"
# zbox = { version = "0.9.2", path = "../zbox", features = ["storage-foundationdb"] }
# regress = "0.4.1"
# base64-simd = "0.7.0"
# quaint = {version = "0.2.0-alpha.13", features = ["sqlite", "chrono", "json", "serde-support", "bigdecimal"], git = "https://github.com/prisma/quaint.git"}
# rmp = "0.8.11"

# [dev-dependencies]
# test-log = "0.2"
