[package]
name = "lunatic-common-api"
version = "0.12.0"
edition = "2021"
description = "Common functionality for building lunatic host function APIs."
homepage = "https://lunatic.solutions"
repository = "https://github.com/lunatic-solutions/lunatic/tree/main/crates/lunatic-common-api"
license = "Apache-2.0/MIT"

[dependencies]
anyhow = { workspace = true }
wasmtime = { workspace = true }
thiserror = { workspace = true }
rand = "0.8.5"
ring = "0.16.20"
rsa = "0.6.1"
sha2 = "0.10.6"
base64 = "0.13.0"
p256 = "0.11.1"
aes-kw = "0.2.1"
uuid = { version = "1.2.1", features = ["v4"] }