[package]
name = "wkr-database"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
quaint = {version = "0.2.0-alpha.13", features = ["sqlite", "chrono", "json", "serde-support", "bigdecimal"], git = "https://github.com/prisma/quaint.git"}
thiserror = { workspace = true }
serde = { workspace = true }
wapc-codec = { workspace = true }
wkr-common = { workspace = true }
tokio = { workspace = true }
rmp = "0.8.11"