[package]
name = "wkr-event"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
wkr-common = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wapc-codec = { workspace = true }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde_bytes = "0.11.7"
http = "0.2.8"