[package]
name = "wkr-runtime"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
wasmtime = "4.0.0"
wasmtime-wasi  = { version = "4.0.0", features = ["tokio"] } 
wasi-cap-std-sync = "4.0.0"
thiserror = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
cfg-if = "1.0.0"
parking_lot = "0.11"
wkr-fetch = {version ="0.0.1", path = "../fetch"}
wkr-database = {version ="0.0.1", path = "../database"}
wkr-common = { workspace = true }
tokio = { workspace = true }
futures = "0.3.25"